# serializer version: 1
# name: test_switches[switch.solaredge_se10000h_external_production-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.solaredge_se10000h_external_production',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'External production',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'External production',
    'platform': 'solaredge_modbus',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'external_production',
    'unique_id': '7E123ABC_external_production',
    'unit_of_measurement': None,
  })
# ---
# name: test_switches[switch.solaredge_se10000h_external_production-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'SolarEdge SE10000H External production',
    }),
    'context': <ANY>,
    'entity_id': 'switch.solaredge_se10000h_external_production',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switches[switch.solaredge_se10000h_negative_site_limit-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.solaredge_se10000h_negative_site_limit',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Negative site limit',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Negative site limit',
    'platform': 'solaredge_modbus',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'negative_site_limit',
    'unique_id': '7E123ABC_negative_site_limit',
    'unit_of_measurement': None,
  })
# ---
# name: test_switches[switch.solaredge_se10000h_negative_site_limit-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'SolarEdge SE10000H Negative site limit',
    }),
    'context': <ANY>,
    'entity_id': 'switch.solaredge_se10000h_negative_site_limit',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
